--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -50,16 +50,16 @@
                             <img alt="image" class="logo-element-img" src="/img/ISOTIPO_VBLANCO_ATINA.png"/>
                         </div>
                     </li>
-                    <!--li>
+                    <li>
                         <a href="index-2.html"><i class="fa fa-edit"></i> <span class="nav-label">Datos</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="index-2.html">Dashboard v.1</a></li>
-                            <li><a href="dashboard_2.html">Dashboard v.2</a></li>
-                            <li><a href="dashboard_3.html">Dashboard v.3</a></li>
-                            <li><a href="dashboard_4_1.html">Dashboard v.4</a></li>
-                            <li><a href="dashboard_5.html">Dashboard v.5 </a></li>
+                            <li><a href="/sistema/add-insurer">Agregar Aseguradora</a></li>
+                            <li><a href="index-2.html">Consultar Aseguradoras</a></li>
+                            <li><a href="dashboard_2.html">Consultar Financiadoras</a></li>
+                            <li><a href="/sistema/add-company">Agregar Empresa</a></li>
+                            <li><a href="/sistema/company">Consultar Empresa</a></li>
                         </ul>
-                    </li-->
+                    </li>
                     <!--li>
                         <a href="index-2.html"><i class="fa fa-group"></i> <span class="nav-label">Asegurados</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
@@ -165,15 +165,10 @@
         <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <a class="navbar-minimalize minimalize-styl-2 btn btn-menu" href="#"><i class="fa fa-bars"></i> </a>
-                <form role="search" class="navbar-form-custom" action="http://webapplayers.com/inspinia_admin-v2.8/search_results.html">
-                    <div class="form-group">
-                        <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
-                    </div>
-                </form>
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li style="padding: 20px">
-                    <span class="m-r-sm text-muted welcome-message">Welcome to INSPINIA+ Admin Theme.</span>
+                    <span class="m-r-sm text-muted welcome-message">Bienvenido al sistema</span>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
