--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1142,7 +1142,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
   position: absolute;
   left: 70px;
   top: 0;
-  background-color: #2f4050;
+  background-color: #9e9e9e;
   padding: 10px 10px 10px 10px;
   font-size: 12px;
 }
@@ -9091,7 +9091,7 @@ body.skin-3 {
 }
 .skin-3 .navbar-default .nav > li > a:hover,
 .skin-3 .navbar-default .nav > li > a:focus {
-  background: #38283c;
+  background: #9e9e9e;
   color: #fff;
 }
 .skin-3 .nav.nav-tabs > li.active > a {
@@ -9132,7 +9132,7 @@ body.md-skin {
   box-shadow: 0 1px 1px -1px rgba(0, 0, 0, 0.34), 0 0 6px 0 rgba(0, 0, 0, 0.14);
 }
 .md-skin .full-height-layout .page-heading {
-  border-bottom: 1px solid #e7eaec !important;
+  border-bottom: 1px solid #9e9e9e !important;
 }
 .md-skin .ibox {
   clear: both;
@@ -9201,7 +9201,7 @@ body.md-skin {
 .md-skin .nav .open > a,
 .md-skin .nav .open > a:hover,
 .md-skin .nav .open > a:focus {
-  background: #1ab394;
+  background: #9e9e9e;
 }
 .md-skin .navbar-top-links li {
   display: inline-table;
@@ -9501,7 +9501,7 @@ body.md-skin {
     -o-transition: background-color 500ms linear;
     -ms-transition: background-color 500ms linear;
     transition: background-color 500ms linear;
-    background-color: #f3f3f4;
+    background-color: #9e9e9e;
   }
   .font-bold {
     position: relative;
