Listo agregar y consultar aseguradoras en modulo de datos

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -9501,7 +9501,7 @@ body.md-skin {
     -o-transition: background-color 500ms linear;
     -ms-transition: background-color 500ms linear;
     transition: background-color 500ms linear;
-    background-color: #9e9e9e;
+    background-color: #ebebeb;
   }
   .font-bold {
     position: relative;
