--- a/src/views/insurerForm.ejs
+++ b/src/views/insurerForm.ejs
@@ -22,7 +22,7 @@
     <div class="col-lg-12">
         <div class="ibox">
             <div class="ibox-content">
-                <form method="POST" action="/sistema/user-management">
+                <form method="POST" action="/sistema/add-insurer">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="ibox">
