--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -54,8 +54,8 @@
                         <a href="index-2.html"><i class="fa fa-edit"></i> <span class="nav-label">Datos</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="/sistema/add-insurer">Agregar Aseguradora</a></li>
-                            <li><a href="index-2.html">Consultar Aseguradoras</a></li>
-                            <li><a href="dashboard_2.html">Consultar Financiadoras</a></li>
+                            <li><a href="/sistema/insurers">Consultar Aseguradoras</a></li>
+                            <!--li><a href="dashboard_2.html">Consultar Financiadoras</a></li-->
                             <li><a href="/sistema/add-company">Agregar Empresa</a></li>
                             <li><a href="/sistema/company">Consultar Empresa</a></li>
                         </ul>
