--- a/src/views/insurers.ejs
+++ b/src/views/insurers.ejs
@@ -2,16 +2,16 @@
 <%- include('layouts/header') %>
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Gestión de Usuarios</h2>
+        <h2>Datos</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="/sistema">Home</a>
             </li>
             <li class="breadcrumb-item">
-                <a>Gestión de Usuarios</a>
+                <a>Datos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Usuarios</strong>
+                <strong>Consulta de Aseguradoras</strong>
             </li>
         </ol>
     </div>
@@ -21,29 +21,26 @@
         <div class="col-lg-12">
             <div class="ibox ">
                 <div class="ibox-title">
-                    <h5>Usuarios</h5>
+                    <h5>Aseguradoras</h5>
                 </div>
                 <div class="ibox-content">
                     <div class="table-responsive">
                         <table 
                             class="table table-striped table-bordered table-hover"
-                            id="tablaUsuarios" 
+                            id="tablaAseguradoras" 
                         >
                         <thead>
                         <tr>
-                            <th>Nombre</th>
-                            <th>Cédula</th>
                             <th>Rif</th>
-                            <th>Correo Electrónico</th>
-                            <th>Dirección Fiscal</th>
-                            <th>Cargo</th>
-                            <th>Linea de Negocio</th>
+                            <th>Nombre</th>
+                            <th>Teléfono</th>
+                            <th>Dirección</th>
                         </tr>
                         </thead>
                         <% if (typeof data == 'undefined') { %>
                             <tbody>
                                 <tr>
-                                    <h5>No hay usuarios inscritos en el sistema</h5>
+                                    <h5>No hay aseguradoras inscritas en el sistema</h5>
                                 </tr>
                             </tbody>
                         <% } else { %>
@@ -53,13 +50,10 @@
                         <% } %>
                         <tfoot>
                         <tr>
-                            <th>Nombre</th>
-                            <th>Cédula</th>
                             <th>Rif</th>
-                            <th>Correo Electrónico</th>
-                            <th>Dirección Fiscal</th>
-                            <th>Cargo</th>
-                            <th>Linea de Negocio</th>
+                            <th>Nombre</th>
+                            <th>Teléfono</th>
+                            <th>Dirección</th>
                         </tr>
                         </tfoot>
                         </table>
@@ -132,22 +126,19 @@
 <!-- Page-Level Scripts -->
 <script>
 var lista = <%- JSON.stringify(data) %>;
-var tablaUsuario = null;
+var tablaAseguradora = null;
 $(document).ready(function(){
-    tablaUsuario = $('#tablaUsuarios').DataTable({
+    tablaAseguradora = $('#tablaAseguradoras').DataTable({
         pageLength: 25,
         responsive: true,
         dom: '<"html5buttons"B>lTfgitp',
         processing: true,
         serverSide: false,
         columns: [
-            {"data": "nombre_usuario"},
-            {"data": "cedula_usuario"},
-            {"data": "rif_usuario"},
-            {"data": "correo_usuario"},
-            {"data": "direccion_usuario"},
-            {"data": "cargo_usuario"},
-            {"data": "tipo_linea_negocio"},
+            {"data": "rif_aseguradora"},
+            {"data": "nombre_aseguradora"},
+            {"data": "telefono_aseguradora"},
+            {"data": "direccion_aseguradora"}
         ],
         buttons: [
             {extend: 'print',
@@ -162,8 +153,8 @@ $(document).ready(function(){
             }
         ]
     });
-    tablaUsuario.rows.add(lista);
-    tablaUsuario.draw();
+    tablaAseguradora.rows.add(lista);
+    tablaAseguradora.draw();
 });
 </script>
 
