--- a/src/views/checkRoles.ejs
+++ b/src/views/checkRoles.ejs
@@ -12,49 +12,256 @@
                 <a>Gestión de Usuarios</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Roles</strong>
+                <strong>Consulta de Roles</strong>
             </li>
         </ol>
     </div>
 </div>
 <div class="wrapper wrapper-content animated fadeInRight">
-<div class="row">
-    <div class="col-lg-12">
-    <div class="ibox ">
-        <div class="ibox-title">
-            <h5>Roles</h5>
-        </div>
-        <div class="ibox-content">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>Nombre</th>
-                    <th>Descripción</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% if (typeof roles == 'undefined') { %>
-                    <tbody>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox ">
+                <div class="ibox-title">
+                    <h5>Roles</h5>
+                </div>
+                <div class="ibox-content">
+                    <div class="table-responsive">
+                        <table 
+                            class="table table-striped table-bordered table-hover"
+                            id="tablaRoles" 
+                        >
+                        <thead>
                         <tr>
-                            <h5>No hay usuarios inscritos en el sistema</h5>
+                            <th>Nombre</th>
+                            <th>Descripción</th>
+                            <th>Editar</th>
+                            <th>Eliminar</th>
                         </tr>
-                    </tbody>
-                <% } else { %>
-                    <tbody>
-                        <% roles.forEach((rol) => { %>
-                            <tr>
-                                <td><%= rol.nombre_rol %></td>
-                                <td><%= rol.descripcion_rol %></td>
-                            </tr>
-                        <% }) %>
-                    </tbody>
-                <% } %>
-                </tbody>
-            </table>
-
+                        </thead>
+                        <% if (typeof data == 'undefined') { %>
+                            <tbody>
+                                <tr>
+                                    <h5>No hay roles inscritos en el sistema</h5>
+                                </tr>
+                            </tbody>
+                        <% } else { %>
+                            <tbody>
+                                
+                            </tbody>
+                        <% } %>
+                        <tfoot>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Descripción</th>
+                            <th>Editar</th>
+                            <th>Eliminar</th>
+                        </tr>
+                        </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+</br>
+</br>
+</br>
+<div class="footer">
+    <div class="float-right">
+        10GB of <strong>250GB</strong> Free.
+    </div>
+    <div>
+        <strong>Copyright</strong> Example Company &copy; 2014-2018
+    </div>
+</div>
+</div>
+</div>
 
-<!-- Se incluye el layout del footer -->
-<%- include('layouts/footer') %>
+<!-- Mainly scripts -->
+<script src="/js/jquery-3.1.1.min.js"></script>
+<script src="/js/popper.min.js"></script>
+<script src="/js/bootstrap.js"></script>
+<script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+
+<!-- Flot -->
+<script src="/js/plugins/flot/jquery.flot.js"></script>
+<script src="/js/plugins/flot/jquery.flot.tooltip.min.js"></script>
+<script src="/js/plugins/flot/jquery.flot.spline.js"></script>
+<script src="/js/plugins/flot/jquery.flot.resize.js"></script>
+<script src="/js/plugins/flot/jquery.flot.pie.js"></script>
+
+<!-- Peity -->
+<script src="/js/plugins/peity/jquery.peity.min.js"></script>
+<script src="/js/demo/peity-demo.js"></script>
+
+<!-- Custom and plugin javascript -->
+<script src="/js/inspinia.js"></script>
+<script src="/js/plugins/pace/pace.min.js"></script>
+
+<!-- jQuery UI -->
+<script src="/js/plugins/jquery-ui/jquery-ui.min.js"></script>
+
+<!-- GITTER -->
+<script src="/js/plugins/gritter/jquery.gritter.min.js"></script>
+
+<!-- Sparkline -->
+<script src="/js/plugins/sparkline/jquery.sparkline.min.js"></script>
+
+<!-- Sparkline demo data  -->
+<script src="/js/demo/sparkline-demo.js"></script>
+
+<!-- ChartJS-->
+<script src="/js/plugins/chartJs/Chart.min.js"></script>
+
+<!-- Toastr -->
+<script src="/js/plugins/toastr/toastr.min.js"></script>
+
+<!-- DataTables -->
+<script src="/js/plugins/dataTables/datatables.min.js"></script>
+<script src="/js/plugins/dataTables/dataTables.bootstrap4.min.js"></script>
+
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<!-- Page-Level Scripts -->
+<script>
+var lista = <%- JSON.stringify(data) %>;
+var tablaRol = null;
+$(document).ready(function(){
+    tablaRol = $('#tablaRoles').DataTable({
+        pageLength: 25,
+        responsive: true,
+        dom: '<"html5buttons"B>lTfgitp',
+        processing: true,
+        serverSide: false,
+        columns: [
+            {"data": "nombre_rol"},
+            {"data": "descripcion_rol"},
+            {
+                "data": "",
+                "render": (data, type, row) => {
+                        return `<form class="form-inline" method="get" action="/sistema/edit-rol/${row.id_rol}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                }
+            },
+            {
+                "data": "",
+                "render": (data, type, row) => {
+                        return `<form class="form-inline" method="post" action="/sistema/remove-rol/${row.id_rol}">
+                                    <button class="btn btn-danger" type="submit"><i class="fa fa-trash"></i></button>
+                                </form>`;
+                }
+            }
+        ],
+        buttons: [
+            {extend: 'print',
+                customize: function (win){
+                    $(win.document.body).addClass('white-bg');
+                    $(win.document.body).css('font-size', '10px');
+
+                    $(win.document.body).find('table')
+                            .addClass('compact')
+                            .css('font-size', 'inherit');
+            }
+            }
+        ]
+    });
+    tablaRol.rows.add(lista);
+    tablaRol.draw();
+});
+</script>
+
+
+<script>
+    $(document).ready(function() {
+    var data1 = [
+    [0,4],[1,8],[2,5],[3,10],[4,4],[5,16],[6,5],[7,11],[8,6],[9,11],[10,30],[11,10],[12,13],[13,4],[14,3],[15,3],[16,6]
+    ];
+    var data2 = [
+    [0,1],[1,0],[2,2],[3,0],[4,1],[5,3],[6,1],[7,5],[8,2],[9,3],[10,2],[11,1],[12,0],[13,2],[14,8],[15,0],[16,0]
+    ];
+    $("#flot-dashboard-chart").length && $.plot($("#flot-dashboard-chart"), [
+    data1, data2
+    ],
+        {
+            series: {
+                lines: {
+                    show: false,
+                    fill: true
+                },
+                splines: {
+                    show: true,
+                    tension: 0.4,
+                    lineWidth: 1,
+                    fill: 0.4
+                },
+                points: {
+                    radius: 0,
+                    show: true
+                },
+                shadowSize: 2
+            },
+            grid: {
+                hoverable: true,
+                clickable: true,
+                tickColor: "#d5d5d5",
+                borderWidth: 1,
+                color: '#d5d5d5'
+            },
+            colors: ["#1ab394", "#1C84C6"],
+            xaxis:{
+            },
+            yaxis: {
+                ticks: 4
+            },
+            tooltip: false
+        }
+    );
+
+    var doughnutData = {
+    labels: ["App","Software","Laptop" ],
+    datasets: [{
+        data: [300,50,100],
+        backgroundColor: ["#a3e1d4","#dedede","#9CC3DA"]
+    }]
+    } ;
+
+
+    var doughnutOptions = {
+    responsive: false,
+    legend: {
+        display: false
+    }
+    };
+
+
+    var ctx4 = document.getElementById("doughnutChart").getContext("2d");
+    new Chart(ctx4, {type: 'doughnut', data: doughnutData, options:doughnutOptions});
+
+    var doughnutData = {
+    labels: ["App","Software","Laptop" ],
+    datasets: [{
+        data: [70,27,85],
+        backgroundColor: ["#a3e1d4","#dedede","#9CC3DA"]
+    }]
+    } ;
+
+
+    var doughnutOptions = {
+    responsive: false,
+    legend: {
+        display: false
+    }
+    };
+
+
+    var ctx4 = document.getElementById("doughnutChart2").getContext("2d");
+    new Chart(ctx4, {type: 'doughnut', data: doughnutData, options:doughnutOptions});
+
+    });
+</script>
+</body>
+
+</html>
