--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -51,7 +51,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="index-2.html"><i class="fa fa-edit"></i> <span class="nav-label">Datos</span> <span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Datos</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="/sistema/add-insurer">Agregar Aseguradora</a></li>
                             <li><a href="/sistema/insurers">Consultar Aseguradoras</a></li>
@@ -137,8 +137,9 @@
                     <li>
                         <a href="#"><i class="fa fa-user-circle-o"></i> <span class="nav-label">Gestión de Usuarios</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
+                            <li><a href="/sistema/user-management">Agregar Usuario</a></li>
                             <li><a href="/sistema/users">Consultar Usuarios</a></li>
-                            <li><a href="/sistema/user-management">Agregar Usuarios</a></li>
+                            <li><a href="/sistema/add-rol">Agregar Rol</a></li>
                             <li><a href="/sistema/roles">Consultar Roles</a></li>
                         </ul>
                     </li>
