--- a/src/views/insurers.ejs
+++ b/src/views/insurers.ejs
@@ -35,6 +35,8 @@
                             <th>Nombre</th>
                             <th>Teléfono</th>
                             <th>Dirección</th>
+                            <th>Editar</th>
+                            <th>Eliminar</th>
                         </tr>
                         </thead>
                         <% if (typeof data == 'undefined') { %>
@@ -54,6 +56,8 @@
                             <th>Nombre</th>
                             <th>Teléfono</th>
                             <th>Dirección</th>
+                            <th>Editar</th>
+                            <th>Eliminar</th>
                         </tr>
                         </tfoot>
                         </table>
@@ -138,7 +142,23 @@ $(document).ready(function(){
             {"data": "rif_aseguradora"},
             {"data": "nombre_aseguradora"},
             {"data": "telefono_aseguradora"},
-            {"data": "direccion_aseguradora"}
+            {"data": "direccion_aseguradora"},
+            {
+                "data": "",
+                "render": (data, type, row) => {
+                        return `<form class="form-inline" method="get" action="/sistema/edit-insurer/${row.id_aseguradora}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                }
+            },
+            {
+                "data": "",
+                "render": (data, type, row) => {
+                        return `<form class="form-inline" method="post" action="/sistema/remove-insurer/${row.id_aseguradora}">
+                                    <button class="btn btn-danger" type="submit"><i class="fa fa-trash"></i></button>
+                                </form>`;
+                }
+            }
         ],
         buttons: [
             {extend: 'print',
